fix: scrollbar and warning toast styles

--- a/src/index.scss
+++ b/src/index.scss
@@ -71,25 +71,6 @@ code {
   color: var(--text-accent);
 }
 
-/* Custom scrollbar styles */
-
-::-webkit-scrollbar {
-  width: 12px;
-  height: auto;
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: #747474;
-  border-radius: 15px;
-  border: 3px solid transparent;
-  background-clip: content-box;
-
-  &:hover {
-    background-color: #4d4d4d;
-    transition: ease-in-out 2s;
-  }
-}
-
 br {
   display: block;
 }
